# learning-dynamics

./: .gitignore
task-01/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
task-01/src/: analysis.py  dataset.py  log.py  models.py  trainer.py  visualization.py
task-01/utils/dim_reduction/: Diffusion_emb_utils.py
task-01/utils/riemmanian_geometry/: Riemannian_utils.py
task-01/utils/visualization/: utils_visualization.py
